MYFACES-3063 findbugs performance rules