@@ -293,7 +293,7 @@ public class HtmlGridRendererBase
                 bodyrows = new Integer[bodyrowsString.length];
                 for(int i = 0; i < bodyrowsString.length; i++) 
                 {
-                    bodyrows[i] = new Integer(bodyrowsString[i]);
+                    bodyrows[i] = Integer.valueOf(bodyrowsString[i]);
                 }
                 
             }
